--- a/assets/web-app/scss/style.scss
+++ b/assets/web-app/scss/style.scss
@@ -1,8 +1,26 @@
-@import "bootstrap-theme";
+@import "font-awesome.min";
+@import "bootstrap-theme.min";
 @import "bootstrap.min";
+@import "colors";
 
+/*==========================================================*/
+// Global
+/*==========================================================*/
+html, body {
+	height: 100%;
+}
 body {
-    font-family: 'Montserrat', sans-serif;
+	font-size: 10px;
+	-webkit-font-smoothing: antialiased; 
+	-webkit-text-size-adjust: 100%;
+}
+
+p {
+	letter-spacing: 0.5px;
+}
+input:focus, 
+textarea:focus {
+	outline: none;
 }
 
 h1,
@@ -10,11 +28,40 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Montserrat', sans-serif;
+}
+h2 {
+    font-size: 38px;
+    font-weight: 700;
+    letter-spacing: -2px;
+}
+a {
+	color: $green;
+	&:hover {
+		color: $green;
+		text-decoration: underline;
+	}
 }
 
-.wrap {
-	padding: 50px 0;
+@import "buttons";
+
+.form-control:focus {
+	border-color: $green;
+}
+.web-app {
+	color: #fff;
+    background: $darkblue;
+	.wrap {
+		padding: 50px 0;
+	}
+
+	.wh1-title {
+	    margin-top: 0;
+	    margin-bottom: 30px;
+	    font-weight: 700;
+	    text-align: center;    
+	    letter-spacing: 0.75px;
+	}
 }
 .search-box {
 	height: auto;
@@ -45,29 +92,88 @@ h5 {
 	}
 }
 .influenced-wrap {
-	margin: 40px 0;
-	padding: 30px 0;
-	background: #f8f8f8;
+	margin: 0;
+	padding: 30px;
+	background: $blue;
+    border: none;
+    border-radius: 5px;
 	text-align: center;
 }
+.socialm-box {
+    margin-bottom: 30px;
+    border-bottom: 1px solid #38495a;
+}
+.socialm-title {
+	margin-top: 0;
+	margin-bottom: 20px;
+    font: 400 36px "Raleway",sans-serif;
+    text-align: left;
+    letter-spacing: 0.75px;
+}
 .influenced {
-	margin-bottom: 30px;
+	margin-bottom: 35px;
 }
 .i-image {
+	margin-bottom: 5px;
 	img {
 		width: 50px;
 		height: 50px;
 		border-radius: 100%;
+		border: 3px solid #fff;
+	}
+}
+.i-facebook {
+	img {
+		border-color: #3b5998;
+	}
+}
+.i-twitter {
+	img {
+		border-color: #00e4ff;
+	}
+}
+.i-instagram {
+	img {
+		border-color: #ded1c1;
 	}
 }
 .i-name {
-	margin-top: 10px;
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font: 700 1.8rem "Raleway", sans-serif;
 }
 .i-details {
-	font-size: 12px;
-    color: #aaa;
+    margin-bottom: 20px;
+    span {
+	    font: 400 1.2rem "Raleway", sans-serif;
+	    color: #7793ad;    	
+    }
+
+}
+.i-value-cont {
+    margin: 0 auto;
+    width: 80%;
+}
+.i-value-box {
+	i {
+	    display: block;
+		font: 700 2rem "Montserrat", sans-serif;
+	}
+}
+.i-value-box.fleft {
+	float: left;
+}
+.i-value-box.right {
+	float: right;
+}
+.i-value-title {
+    display: block;
+    margin-bottom: 8px;
+    font: 700 1.2rem "Montserrat", sans-serif;
 }
 .i-value {
+	margin-bottom: 15px;
 	.value {
 		font-size: 14px;
 	}
@@ -86,19 +192,6 @@ h5 {
 	    }
 	}
 }
-select.form-control {
-	height: 40px;
-    color: #fff;
-    border-color: #19b0a4;
-    background: #19b0a4;
 
-    option {
-    	padding: 10px 0;
-    }
-
-    &:focus {
-    	border-color: #19B0A4;
-    	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(25, 176, 164, 0.6);
-		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(25, 176, 164, 0.6);
-    }
-}
+@import "nav-tabs";
+@import "filter-box";
